--- a/translations/recommendations.tex/recommendations.tex.pot
+++ b/translations/recommendations.tex/recommendations.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-08-22 18:15+0200\n"
+"POT-Creation-Date: 2024-09-25 23:26+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,11 +18,13 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
-#: coops/emerald_island.tex:5 clash/bloody_grail.tex:5 clash/the_hunt.tex:5
+#: coops/emerald_island.tex:5 clash/bloody_grail.tex:5
+#: clash/force_of_will.tex:5 clash/the_hunt.tex:5
 #: clash/dragoncurse_castle.tex:5 campaigns/inferno_devilish_plan.tex:6
 #: campaigns/inferno_steadwicks_fall.tex:5
 #: campaigns/inferno_deal_with_the_devil.tex:5 sections/what_to_play.tex:5
-#: sections/recommendations.tex:96 sections/credits.tex:10
+#: sections/recommendations.tex:74 sections/recommendations.tex:129
+#: sections/credits.tex:10
 #, no-wrap
 msgid ""
 "{2}\n"
@@ -40,7 +42,7 @@ msgstr ""
 msgid "\\iftoggle{printable}{}{\\bigbreak}"
 msgstr ""
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:10
 #, no-wrap
 msgid ""
@@ -51,7 +53,7 @@ msgid ""
 "\n"
 msgstr ""
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:12
 #, no-wrap
 msgid ""
@@ -59,7 +61,7 @@ msgid ""
 "\n"
 msgstr ""
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:14
 #, no-wrap
 msgid ""
@@ -67,7 +69,7 @@ msgid ""
 "\n"
 msgstr ""
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:18
 #, no-wrap
 msgid ""
@@ -77,7 +79,7 @@ msgid ""
 "\n"
 msgstr ""
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:24
 #, no-wrap
 msgid ""
@@ -89,7 +91,7 @@ msgid ""
 "\n"
 msgstr ""
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:27
 #, no-wrap
 msgid ""
@@ -98,7 +100,7 @@ msgid ""
 "\n"
 msgstr ""
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:30
 #, no-wrap
 msgid ""
@@ -107,7 +109,7 @@ msgid ""
 "\n"
 msgstr ""
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:32
 #, no-wrap
 msgid ""
@@ -115,7 +117,7 @@ msgid ""
 "\n"
 msgstr ""
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:35
 #, no-wrap
 msgid ""
@@ -124,23 +126,23 @@ msgid ""
 "\n"
 msgstr ""
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:37
 #, no-wrap
 msgid ""
-"\\subsection*{Trading Post}\n"
+"\\subsection*{Guaranteed Settlement}\n"
 "\n"
 msgstr ""
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:39
 #, no-wrap
 msgid ""
-"Although rules as written state that you can remove only one card from your hand while Visiting a Trading Post, it is recommended to allow removing as many as you like.\n"
+"When distributing Far Tiles (II--III) between players, each player's pool of Map Tiles must include one Settlement.\n"
 "\n"
 msgstr ""
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:41
 #, no-wrap
 msgid ""
@@ -148,8 +150,103 @@ msgid ""
 "\n"
 msgstr ""
 
-#. type: multicols
+#. type: multicols*
 #: sections/recommendations.tex:43
+#, no-wrap
+msgid ""
+"\\includegraphics[width=\\linewidth]{\\art/medusa.jpg}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:45
+#, no-wrap
+msgid ""
+"\\subsection*{War Machines as Artifacts}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:48
+#, no-wrap
+msgid ""
+"Shuffle one of each War Machine into the Artifact Deck before the start of the game.\n"
+"If using the optional Tournament rule of splitting the Artifact Deck, shuffle the War Machines into the Major Artifact deck.\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:50
+#, no-wrap
+msgid ""
+"\\subsection*{Round One Mulligan}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:52
+#, no-wrap
+msgid ""
+"At the start of the \\nth{1} Round, each player may reshuffle their hand of Cards back into their Deck of Might and Magic and draw a new starting hand of Cards once.\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:54
+#, no-wrap
+msgid ""
+"\\subsection*{Tier V--VII Combat on Hard+ Difficulty}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:57
+#, no-wrap
+msgid ""
+"Treat Level V--VII Combats as one difficulty step lower when playing on Hard or Impossible.\n"
+"For example, a Level VII Combat on Hard will be against 2 × Azure Neutral Units.\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:59
+#, no-wrap
+msgid ""
+"\\subsection*{Trading Post}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:61
+#, no-wrap
+msgid ""
+"Although rules as written state that you can remove only one card from your hand while Visiting a Trading Post, it is recommended to allow removing as many as you like.\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:63
+#, no-wrap
+msgid ""
+"\\subsection*{Victory Points}\n"
+"\n"
+msgstr ""
+
+#. type: multicols*
+#: sections/recommendations.tex:70
+#, no-wrap
+msgid ""
+"When playing with the optional Victory Points from the Tournament book, the following rules apply (unless overruled by the Scenario):\n"
+"\\begin{itemize}\n"
+"  \\item Faction Towns grant 1 VP.\n"
+"  \\item Possessing the Grail at the end of the match grants 3 VPs. If the Grail was transported to that player's Faction Town, it grants 5 VPs instead.\n"
+"  \\item Capturing a Dragon Utopia grants 3 VPs.\n"
+"\\end{itemize}\n"
+"\n"
+msgstr ""
+
+#. type: multicols
+#: sections/recommendations.tex:76
 #, no-wrap
 msgid ""
 "\\subsection*{Combat with Neutral Units}\n"
@@ -157,7 +254,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols
-#: sections/recommendations.tex:45
+#: sections/recommendations.tex:78
 #, no-wrap
 msgid ""
 "During Combat with Neutral Units in clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle Board, the player positioning the Neutral Units must do the same.\n"
@@ -165,7 +262,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols
-#: sections/recommendations.tex:49
+#: sections/recommendations.tex:82
 #, no-wrap
 msgid ""
 "Placing Neutral Units far apart only makes the other player waste MPs, which slows the game down.\n"
@@ -175,7 +272,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols
-#: sections/recommendations.tex:53
+#: sections/recommendations.tex:86
 #, no-wrap
 msgid ""
 "\\begin{center}\n"
@@ -185,7 +282,7 @@ msgid ""
 msgstr ""
 
 #. type: figure*
-#: sections/recommendations.tex:74
+#: sections/recommendations.tex:107
 #, no-wrap
 msgid ""
 "[!h]\n"
@@ -208,7 +305,7 @@ msgid ""
 msgstr ""
 
 #. type: figure*
-#: sections/recommendations.tex:94
+#: sections/recommendations.tex:127
 #, no-wrap
 msgid ""
 "[!h]\n"
@@ -230,7 +327,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols
-#: sections/recommendations.tex:98
+#: sections/recommendations.tex:131
 #, no-wrap
 msgid ""
 "\\subsection*{General Recommendations}\n"
@@ -238,7 +335,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols
-#: sections/recommendations.tex:100
+#: sections/recommendations.tex:133
 #, no-wrap
 msgid ""
 "The following are not custom rules, but rather recommendations to help you get the most out of your game:\n"
@@ -246,7 +343,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols
-#: sections/recommendations.tex:107
+#: sections/recommendations.tex:140
 #, no-wrap
 msgid ""
 "\\begin{itemize}\n"
@@ -259,7 +356,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols
-#: sections/recommendations.tex:111
+#: sections/recommendations.tex:144
 #, no-wrap
 msgid ""
 "\\begin{center}\n"
