PL translation update

--- a/sections/recommendations.tex
+++ b/sections/recommendations.tex
@@ -44,7 +44,7 @@ When distributing Far Tiles (II--III) between players, each player's pool of Map
 \subsection*{War Machines as Artifacts}
 
 Shuffle one of each War Machine into the Artifact Deck before the start of the game.
-If using the optional Tournament rule of splitting the Artifact Deck, shuffle the War Machines into the Major Artifact deck.
+If using the optional Tournament rule of splitting the Artifact Deck, shuffle the War Machines into the Major Artifact Deck.
 
 \subsection*{Round One Mulligan}
 
@@ -53,7 +53,7 @@ At the start of the \nth{1} Round, each player may reshuffle their hand of Cards
 \subsection*{Tier V--VII Combat on Hard+ Difficulty}
 
 Treat Level V--VII Combats as one difficulty step lower when playing on Hard or Impossible.
-For example, a Level VII Combat on Hard will be against 2 × Azure Neutral Units.
+For example, a Level VII Combat on Hard will be against 2 × \svgunit{azure} Neutral Units.
 
 \subsection*{Trading Post}
 
