--- a/translations/recommendations.tex/cs.po
+++ b/translations/recommendations.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-09-25 23:26+0200\n"
+"POT-Creation-Date: 2024-09-25 23:56+0200\n"
 "PO-Revision-Date: 2024-07-28 15:06+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -211,7 +211,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "Shuffle one of each War Machine into the Artifact Deck before the start of the game.\n"
-"If using the optional Tournament rule of splitting the Artifact Deck, shuffle the War Machines into the Major Artifact deck.\n"
+"If using the optional Tournament rule of splitting the Artifact Deck, shuffle the War Machines into the Major Artifact Deck.\n"
 "\n"
 msgstr ""
 
@@ -249,7 +249,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "Treat Level V--VII Combats as one difficulty step lower when playing on Hard or Impossible.\n"
-"For example, a Level VII Combat on Hard will be against 2 × Azure Neutral Units.\n"
+"For example, a Level VII Combat on Hard will be against 2 × \\svgunit{azure} Neutral Units.\n"
 "\n"
 msgstr ""
 
