Apply suggestions from code review
Co-authored-by: krazanas <166760266+krazanas@users.noreply.github.com>

--- a/translations/recommendations.tex/pl.po
+++ b/translations/recommendations.tex/pl.po
@@ -211,7 +211,7 @@ msgid ""
 "If using the optional Tournament rule of splitting the Artifact Deck, shuffle the War Machines into the Major Artifact Deck.\n"
 "\n"
 msgstr ""
-"Wtasuj po jednej z każdej Machiny Wojennej do Talii Artefaktów przed rozpoczęciem gry.\n"
+"Wtasuj po jednej kopii każdej Karty Machiny Wojennej do Talii Artefaktów przed rozpoczęciem gry.\n"
 "Jeśli korzystasz z opcjonalnych Zasad Turniejowych dotyczących podziału Talii Artefaktów, wtasuj Machiny Wojenne do Talii Mocnych Artefaktów.\n"
 "\n"
 
@@ -253,7 +253,7 @@ msgid ""
 "For example, a Level VII Combat on Hard will be against 2 × \\svgunit{azure} Neutral Units.\n"
 "\n"
 msgstr ""
-"Traktuj Walki na poziomie V--VII jako o jeden stopień trudności niższe podczas gry na poziomie Trudnym lub Niemożliwym.\n"
+"Grając na poziomie Trudnym lub Niemożliwym, traktuj Walki na poziomie V--VII jako łatwiejsze o jeden stopień trudności.\n"
 "Na przykład, Walka poziomu VII na poziomie Trudnym stoczy się przeciwko 2 × \\svgunit{Azure} Neutralnym Jednostkom.\n"
 "\n"
 
@@ -274,7 +274,7 @@ msgid ""
 "Although rules as written state that you can remove only one card from your hand while Visiting a Trading Post, it is recommended to allow removing as many as you like.\n"
 "\n"
 msgstr ""
-"Mimo że zasady mówią, że możesz usunąć tylko jedną kartę z ręki podczas odwiedzania Punktu Handlowego, zaleca się pozwolić na usunięcie tylu kart, ile chcesz.\n"
+"Mimo że zasady mówią, że możesz usunąć tylko jedną kartę z ręki podczas odwiedzania Punktu Handlowego, zaleca się pozwolić na usunięcie dowolnej liczby Kart.\n"
 "\n"
 
 #. type: multicols*
@@ -299,7 +299,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"Kiedy grasz z opcjonalnymi Punktami Zwycięstwa z Księgi Turniejów, obowiązują następujące zasady (chyba że zasady Scenariusza mówią inaczej):\n"
+"Podczas gier na Zasadach Turniejowych, przyznaj opisaną niżej ilość punktów za osiągnięcie poszczególnych celów (o ile Zasady Scenariusza nie mówią inaczej):\n"
 "\\begin{itemize}\n"
 "  \\item Miasta Frakcji przyznają 1 PZ.\n"
 "  \\item Posiadanie Graala na koniec gry przyznaje 3 PZ. Jeśli Graal został przetransportowany do Miasta Frakcji tego gracza, zamiast tego przyznaje 5 PZ.\n"
