Add more words to caps check (#119)

--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -68,7 +68,7 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
 
 \textbf{\nth{4}, \nth{8} and \nth{12} Rounds:}
 \begin{itemize}
-  \item Remove all Black cubes from every Windmill, Water Wheel, and Mystical Garden on the map.
+  \item Remove all Black Cubes from every Windmill, Water Wheel, and Mystical Garden on the map.
 \end{itemize}
 
 \vspace*{\fill}\columnbreak
@@ -83,14 +83,14 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
       \item Another player (your choice) gains 2\,\svg{building_materials}
       \item Another player (your choice) gains 1\,\svg{valuables}
     \end{itemize}
-  Then, flag the VII Field with a Faction cube.
+  Then, flag the VII Field with a Faction Cube.
   (There is no bonus in solo play!)
   \item Ignore all yellow borders on Starting Tiles I.
   \item You can use your build Token to give your resources to another player.
   \item Two players can use their build Tokens to exchange Artifacts and/or Spells.
   \item Whenever a player Visits an Obelisk, that player rolls one treasure Die and one resource Die, and resolves one of them.
-  \item When all VII Fields (excluding the Titans' Stronghold) are flagged, randomly draw and shuffle the specified number (see the next page) of Neutral Unit cards from each of their corresponding Decks to create a separate Deck of Neutral Units for the Titans' Stronghold (the Deck of the Titans' Stronghold is sometimes split in two because certain Scenarios are otherwise impossible to implement with the cards from certain expansions).
-  \item Any time a Hero enters the Titans' Stronghold, they draw 5 cards from the Titans' Stronghold Deck instead of from the Neutral Unit card Decks. The Units are placed on the Combat Board (see page 29, ``Neutral Unit Setup'' in the Core Rulebook). Players attempt to defeat the Units they find in the Titans' Stronghold. Any Neutral Units defeated during Combat in the Titans' Stronghold are returned to their respective Neutral Unit Decks instead of the Titans' Stronghold Deck. Any Neutral Units surviving Combat in the Titans' Stronghold are shuffled back into the Titans' Stronghold Deck. If there are not enough Unit cards in this Deck, draw as many Unit cards as are available and place them on the Combat Board.
+  \item When all VII Fields (excluding the Titans' Stronghold) are flagged, randomly draw and shuffle the specified number (see the next page) of Neutral Unit Cards from each of their corresponding Decks to create a separate Deck of Neutral Units for the Titans' Stronghold (the Deck of the Titans' Stronghold is sometimes split in two because certain Scenarios are otherwise impossible to implement with the Cards from certain expansions).
+  \item Any time a Hero enters the Titans' Stronghold, they draw 5 Cards from the Titans' Stronghold Deck instead of from the Neutral Unit Card Decks. The Units are placed on the Combat Board (see page 29, ``Neutral Unit Setup'' in the Core Rulebook). Players attempt to defeat the Units they find in the Titans' Stronghold. Any Neutral Units defeated during Combat in the Titans' Stronghold are returned to their respective Neutral Unit Decks instead of the Titans' Stronghold Deck. Any Neutral Units surviving Combat in the Titans' Stronghold are shuffled back into the Titans' Stronghold Deck. If there are not enough Unit Cards in this Deck, draw as many Unit Cards as are available and place them on the Combat Board.
   \item Combat in the Titans' Stronghold now costs 1 MP to extend per Combat Round, just like Combat against non-Azure tier Units.
   \item Additionally, no player can:
   \begin{itemize}
