--- a/translations/force_of_will.tex/pl.po
+++ b/translations/force_of_will.tex/pl.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-28 22:57+0200\n"
+"POT-Creation-Date: 2024-09-25 10:08+0200\n"
 "PO-Revision-Date: 2024-08-28 17:40+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -293,13 +293,13 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{4} and \\nth{8} Rounds:}\n"
 "\\begin{itemize}\n"
-"  \\item Remove all Black cubes from every Water Wheel and Windmill on the map.\n"
+"  \\item Remove all Black Cubes from every Water Wheel and Windmill on the map.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{Rundy 4. i 8.:}\n"
 "\\begin{itemize}\n"
-"  \\item Usuń czarne kostki z każdego Młyna Wodnego i Wiatraka na mapie.\n"
+"  \\item Usuń Czarne Kostki z każdego Młyna Wodnego i Wiatraka na mapie.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -325,7 +325,7 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item When a player Visits an Obelisk, they roll 2 \\svg{treasure} and choose one to resolve.\n"
-"  \\item A player may not use the Diplomacy card to skip Combat on the Dragon Utopia Field.\n"
+"  \\item A player may not use the Diplomacy Card to skip Combat on the Dragon Utopia Field.\n"
 "  \\item When a Hero moves to the Dragon Utopia Field, they must fight, depending on chosen difficulty, the following number of Neutral Units:\n"
 "  \\begin{itemize}\n"
 "    \\item \\textbf{Easy:} 1 × \\svgunit{azure}, 2 × \\svgunit{silver}, 1 × \\svgunit{bronze}\n"
@@ -343,7 +343,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Gdy gracz Odwiedza Obelisk, rzuca 2 \\svg{treasure} i wybiera jeden wynik.\n"
-"  \\item Gracz nie może użyć karty Dyplomacji, aby ominąć Walkę na polu Smoczej Utopii.\n"
+"  \\item Gracz nie może użyć Karty Dyplomacji, aby ominąć Walkę na polu Smoczej Utopii.\n"
 "  \\item Gdy Bohater przemieszcza się na pole Smoczej Utopii, musi walczyć z następującą liczbą Neutralnych Jednostek w zależności od wybranego poziomu trudności:\n"
 "  \\begin{itemize}\n"
 "    \\item \\textbf{Łatwy:} 1 × \\svgunit{azure}, 2 × \\svgunit{silver}, 1 × \\svgunit{bronze}\n"
