--- a/clash/dragoncurse_castle.tex
+++ b/clash/dragoncurse_castle.tex
@@ -57,7 +57,7 @@ However, if the Random Town is first captured in the \nth{10} Round, the game pr
 
   \textbf{\nth{4} and \nth{8} Round:}
 \begin{itemize}
-  \item Remove all Black cubes from Water Wheels and Windmills on the map.
+  \item Remove all Black Cubes from Water Wheels and Windmills on the map.
   \item All Heroes gain +1 \svgeven{movement}
 \end{itemize}
 
@@ -75,7 +75,7 @@ During this Scenario:
       \item Place the Main Hero when defeated.
       \item Temporarily transport the army to, for 8 \svg{gold}, when the Random Town is attacked.
     \end{itemize}
-  \item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws cards from the Neutral Units \svgunit{azure} Deck until a Dragon not associated with any Faction is drawn.
+  \item The first player to Visit the Dragon Utopia (after defeating the defending Azure Unit(s)) draws Cards from the Neutral Units \svgunit{azure} Deck until a Dragon not associated with any Faction is drawn.
     The player may immediately Recruit that Dragon for free.
 \end{itemize}
 
