--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -44,7 +44,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 2 × Starting (I) Map Tile
   \item 2 × Far (II--III) Map Tile
   \item 2 × Near (IV--V) Map Tile
-  \item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the Tile
+  \item 1 × Center (VI--VII) Map Tile; place a Black Cube or a Miniature representing the Dragon in the center of the Tile
 \end{itemize}
 
 \textbf{For a 3-player Scenario:}
@@ -52,7 +52,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 3 × Starting (I) Map Tile
   \item 3 × Far (II--III) Map Tile
   \item 3 × Near (IV--V) Map Tile
-  \item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the Tile
+  \item 1 × Center (VI--VII) Map Tile; place a Black Cube or a Miniature representing the Dragon in the center of the Tile
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
@@ -65,7 +65,7 @@ If the Dragon Boss still lives at the end of the \nth{14} Round, all players los
 
 \textbf{\nth{4}, \nth{8} and \nth{12} Rounds:}
 \begin{itemize}
-  \item Remove all Black cubes from all the Water Wheels, Windmills and Mystical Gardens on the map.
+  \item Remove all Black Cubes from all the Water Wheels, Windmills and Mystical Gardens on the map.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
@@ -74,7 +74,7 @@ Before the start of this Scenario:
 
 \begin{itemize}
   \item Select one of the Dragons from the boss list: Azure Dragon, Crystal Dragon, Rust Dragon, or Faerie Dragon.
-    You can choose randomly by picking one of the four shuffled Statistic cards: \textit{Attack} -- Azure, \textit{Defense} -- Crystal, \textit{Knowledge} -- Rust, \textit{Power} -- Faerie.
+    You can choose randomly by picking one of the four shuffled Statistic Cards: \textit{Attack} -- Azure, \textit{Defense} -- Crystal, \textit{Knowledge} -- Rust, \textit{Power} -- Faerie.
 \end{itemize}
 
 During this Scenario:
@@ -87,7 +87,7 @@ During this Scenario:
   \item Heroes are unable to retreat from battles with the Dragon Boss.
   \item When each player Visits an Obelisk, they can choose to roll a Treasure Die or receive 1 \svg{experience}.
   \item Players can Visit each Obelisk only once.
-    Afterwards, they must place their Faction cube on the Field.
+    Afterwards, they must place their Faction Cube on the Field.
   \item In the boss encounter, there is no battle Round limit.
 \end{itemize}
 
@@ -121,7 +121,7 @@ During this Scenario:
 
   \textbf{Fighting the Azure Dragon:}
   \begin{enumerate}
-    \item Place the Azure Dragon miniature/card on the battlefield.
+    \item Place the Azure Dragon Miniature/Card on the battlefield.
       Ignore its ability.
     \item Prepare a pile of discarded Artifacts and shuffle it.
   \end{enumerate}
@@ -130,12 +130,12 @@ During this Scenario:
 
   \textbf{Rules:}
   \begin{itemize}
-    \item \textit{Hoarding Tendency:} At the start of each Turn, randomly choose a card from the shuffled pile of discarded Artifacts.
+    \item \textit{Hoarding Tendency:} At the start of each Turn, randomly choose a Card from the shuffled pile of discarded Artifacts.
       If the Artifact is:
       \begin{itemize}
         \item A weapon: The Dragon gains one Breath attack that targets three creatures in a row.
           The Unit directly hit in the middle suffers full damage, while the Units on both sides suffer 3\,\svg{damage-red} less.
-        \item A piece of armor, shield, or clothing: The Dragon gains 3\,\svg{defense}, represented with spare Faction cubes.
+        \item A piece of armor, shield, or clothing: The Dragon gains 3\,\svg{defense}, represented with spare Faction Cubes.
           Remove them after they have absorbed damage.
         \item A trinket: The Azure Dragon roars and summons an ice storm, causing all creatures to freeze in fear.
           This results in every Unit moving only 1 Field per Round, while the Azure Dragon can fly to any Field on the Combat Board.
@@ -186,7 +186,7 @@ During this Scenario:
 
   \textbf{Fighting the Crystal Dragon:}
   \begin{enumerate}
-    \item Place the Crystal Dragon miniature/card on the battlefield.
+    \item Place the Crystal Dragon Miniature/Card on the battlefield.
       Ignore its ability.
     \item Place two Gold Golems and two Diamond Golems on the battlefield.
   \end{enumerate}
@@ -204,7 +204,7 @@ During this Scenario:
         \item Consuming a Diamond Golem: Remove 4 \svg{damage-red}.
         \item[] \textbf{Note:} The Crystal Dragon can only consume one Golem per Turn.
       \end{itemize}
-    \item Golem Abilities: Gold and Diamond Golems do not possess any additional abilities beyond those specified on their cards.
+    \item Golem Abilities: Gold and Diamond Golems do not possess any additional abilities beyond those specified on their Cards.
       They primarily serve as fodder for the Crystal Dragon's health regeneration.
     \item The Crystal Dragon \textit{retaliates twice} per battle Round.
   \end{itemize}
@@ -252,9 +252,9 @@ During this Scenario:
 
   \textbf{Fighting the Rust Dragon:}
   \begin{enumerate}
-    \item Place the Rust Dragon miniature/card on the battlefield.
+    \item Place the Rust Dragon Miniature/Card on the battlefield.
       Ignore its ability.
-    \item Prepare four spare M\&M Deck cards to mark pools of acid.
+    \item Prepare four spare M\&M Deck Cards to mark pools of acid.
   \end{enumerate}
 
   \medskip
@@ -263,13 +263,13 @@ During this Scenario:
   \begin{itemize}
     \item The Rust Dragon is immune to basic Spells.
     \item \textit{Corrosive Vomit:} The Rust Dragon has a powerful crowd control ability that allows it to spew four pools of sulfuric acid onto the battlefield \textit{at the beginning} of each Combat Round.
-      Use M\&M Deck cards placed face down to mark their locations.
+      Use M\&M Deck Cards placed face down to mark their locations.
     \item The Rust Dragon cannot place pools on the same Fields as in the previous Round.
-      Mark the Fields with spare Faction cubes to indicate where the pools were located.
+      Mark the Fields with spare Faction Cubes to indicate where the pools were located.
     \item The pools of sulfuric acid block battlefield Fields and impede movement for one Round only.
       They serve as Obstacles for both players and the Dragon.
     \item The Rust Dragon's passive ability, \textit{Corrosion}, decreases an enemy Unit's armor by 2 with each attack.
-      Place a spare Faction cube on the Unit's card to indicate this effect.
+      Place a spare Faction Cube on the Unit's Card to indicate this effect.
       Corrosion stacks up to -4 \svg{defense}.
   \end{itemize}
 }
@@ -319,9 +319,9 @@ During this Scenario:
 
   \textbf{Fighting the Faerie Dragon:}
   \begin{enumerate}
-    \item Place 2 Faerie Dragon cards on the battlefield.
+    \item Place 2 Faerie Dragon Cards on the battlefield.
       Ignore their abilities.
-    \item Place 1 Dendroid card from the \svg{silver} Neutral Units Deck onto the battlefield, and place 3 additional cards face down to represent the other 3 Dendroids.
+    \item Place 1 Dendroid Card from the \svg{silver} Neutral Units Deck onto the battlefield, and place 3 additional Cards face down to represent the other 3 Dendroids.
   \end{enumerate}
 
   \medskip
