--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-28 17:56+0200\n"
+"POT-Creation-Date: 2024-09-25 10:08+0200\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -246,7 +246,7 @@ msgid ""
 "  \\item 2 × Starting (I) Map Tile\n"
 "  \\item 2 × Far (II--III) Map Tile\n"
 "  \\item 2 × Near (IV--V) Map Tile\n"
-"  \\item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the Tile\n"
+"  \\item 1 × Center (VI--VII) Map Tile; place a Black Cube or a Miniature representing the Dragon in the center of the Tile\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -268,7 +268,7 @@ msgid ""
 "  \\item 3 × Starting (I) Map Tile\n"
 "  \\item 3 × Far (II--III) Map Tile\n"
 "  \\item 3 × Near (IV--V) Map Tile\n"
-"  \\item 1 × Center (VI--VII) Map Tile; place a Black cube or a miniature representing the Dragon in the center of the Tile\n"
+"  \\item 1 × Center (VI--VII) Map Tile; place a Black Cube or a Miniature representing the Dragon in the center of the Tile\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -311,7 +311,7 @@ msgstr ""
 msgid ""
 "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
 "\\begin{itemize}\n"
-"  \\item Remove all Black cubes from all the Water Wheels, Windmills and Mystical Gardens on the map.\n"
+"  \\item Remove all Black Cubes from all the Water Wheels, Windmills and Mystical Gardens on the map.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -337,7 +337,7 @@ msgstr ""
 msgid ""
 "\\begin{itemize}\n"
 "  \\item Select one of the Dragons from the boss list: Azure Dragon, Crystal Dragon, Rust Dragon, or Faerie Dragon.\n"
-"    You can choose randomly by picking one of the four shuffled Statistic cards: \\textit{Attack} -- Azure, \\textit{Defense} -- Crystal, \\textit{Knowledge} -- Rust, \\textit{Power} -- Faerie.\n"
+"    You can choose randomly by picking one of the four shuffled Statistic Cards: \\textit{Attack} -- Azure, \\textit{Defense} -- Crystal, \\textit{Knowledge} -- Rust, \\textit{Power} -- Faerie.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -359,7 +359,7 @@ msgid ""
 "  \\item Heroes are unable to retreat from battles with the Dragon Boss.\n"
 "  \\item When each player Visits an Obelisk, they can choose to roll a Treasure Die or receive 1 \\svg{experience}.\n"
 "  \\item Players can Visit each Obelisk only once.\n"
-"    Afterwards, they must place their Faction cube on the Field.\n"
+"    Afterwards, they must place their Faction Cube on the Field.\n"
 "  \\item In the boss encounter, there is no battle Round limit.\n"
 "\\end{itemize}\n"
 "\n"
@@ -417,16 +417,16 @@ msgid ""
 "prolonged physical attack.  It is said those standing face-to-face with an "
 "Azure Dragon tend to freeze from pure fear.  } \\medskip \\textbf{Fighting "
 "the Azure Dragon:} \\begin{enumerate} \\item Place the Azure Dragon "
-"miniature/card on the battlefield.  Ignore its ability.  \\item Prepare a "
+"Miniature/Card on the battlefield.  Ignore its ability.  \\item Prepare a "
 "pile of discarded Artifacts and shuffle it.  \\end{enumerate} \\medskip "
 "\\textbf{Rules:} \\begin{itemize} \\item \\textit{Hoarding Tendency:} At the "
-"start of each Turn, randomly choose a card from the shuffled pile of "
+"start of each Turn, randomly choose a Card from the shuffled pile of "
 "discarded Artifacts.  If the Artifact is: \\begin{itemize} \\item A weapon: "
 "The Dragon gains one Breath attack that targets three creatures in a row.  "
 "The Unit directly hit in the middle suffers full damage, while the Units on "
 "both sides suffer 3\\,\\svg{damage-red} less.  \\item A piece of armor, "
 "shield, or clothing: The Dragon gains 3\\,\\svg{defense}, represented with "
-"spare Faction cubes.  Remove them after they have absorbed damage.  \\item A "
+"spare Faction Cubes.  Remove them after they have absorbed damage.  \\item A "
 "trinket: The Azure Dragon roars and summons an ice storm, causing all "
 "creatures to freeze in fear.  This results in every Unit moving only 1 Field "
 "per Round, while the Azure Dragon can fly to any Field on the Combat Board.  "
@@ -441,11 +441,11 @@ msgstr ""
 "podobno może wytrzymać nasilający się atak fizyczny. Powiadają, że ludzie, "
 "którzy stają do walki z takim smokiem zostają niekiedy sparaliżowani "
 "strachem.} \\medskip \\\\ \\textbf{Walcząc z Błękitnym Smokiem:} "
-"\\begin{enumerate} \\item Umieść figurkę/kartę Błękitnego Smoka na Planszy "
+"\\begin{enumerate} \\item Umieść Figurkę/Kartę Błękitnego Smoka na Planszy "
 "Walki. Zignoruj jego zdolność. \\item Przygotuj stos odrzuconych Artefaktów "
 "i potasuj go. \\end{enumerate} \\medskip \\textbf{Zasady:} \\begin{itemize} "
 "\\item \\textit{Skłonność do Gromadzenia:} Na początku każdej tury losowo "
-"wybierz kartę z potasowanego stosu odrzuconych Artefaktów. Jeśli Artefakt "
+"wybierz Kartę z potasowanego stosu odrzuconych Artefaktów. Jeśli Artefakt "
 "to: \\begin{itemize} \\item Broń: Smok zyskuje atak zionięciem, który omiata "
 "trzy stworzeniach w rzędzie. Jednostka bezpośrednio trafiona w środku "
 "otrzymuje pełne obrażenia, podczas gdy Jednostki po obu stronach cierpią o "
@@ -511,7 +511,7 @@ msgid ""
 "magical heart.  Used frequently as a training tool for young dragon slayers, "
 "many wizards also create these creatures for the crystal they shed.  } "
 "\\medskip \\textbf{Fighting the Crystal Dragon:} \\begin{enumerate} \\item "
-"Place the Crystal Dragon miniature/card on the battlefield.  Ignore its "
+"Place the Crystal Dragon Miniature/Card on the battlefield.  Ignore its "
 "ability.  \\item Place two Gold Golems and two Diamond Golems on the "
 "battlefield.  \\end{enumerate} \\medskip \\textbf{Rules:} \\begin{itemize} "
 "\\item At the start of every battle Round, check if any of the Golems were "
@@ -525,7 +525,7 @@ msgid ""
 "red}.  \\item[] \\textbf{Note:} The Crystal Dragon can only consume one "
 "Golem per Turn.  \\end{itemize} \\item Golem Abilities: Gold and Diamond "
 "Golems do not possess any additional abilities beyond those specified on "
-"their cards.  They primarily serve as fodder for the Crystal Dragon's health "
+"their Cards.  They primarily serve as fodder for the Crystal Dragon's health "
 "regeneration.  \\item The Crystal Dragon \\textit{retaliates twice} per "
 "battle Round.  \\end{itemize} }"
 msgstr ""
@@ -536,7 +536,7 @@ msgstr ""
 "często jako narzędzie szkolenia młodych pogromców smoków; wielu czarodziejów "
 "tworzy je także dla kryształów, które się z nich łuszczą.} \\medskip \\\\ "
 "\\textbf{Walcząc z Kryształowym Smokiem:} \\begin{enumerate} \\item Umieść "
-"figurkę/kartę Kryształowego Smoka na Planszy Walki. Zignoruj jego zdolność.  "
+"Figurkę/Kartę Kryształowego Smoka na Planszy Walki. Zignoruj jego zdolność.  "
 "\\item Umieść dwa Złote i dwa Diamentowe Golemy na Planszy Walki.  "
 "\\end{enumerate} \\medskip \\textbf{Zasady:} \\begin{itemize} \\item Na "
 "początku każdej Rundy Walki sprawdź, czy którykolwiek z Golemów został "
@@ -608,21 +608,21 @@ msgid ""
 "concentrated acid as their primary attack.  This acid is capable of eating "
 "through the strongest armor, lowering the defense of its target while "
 "inflicting further damage.  } \\medskip \\textbf{Fighting the Rust Dragon:} "
-"\\begin{enumerate} \\item Place the Rust Dragon miniature/card on the "
+"\\begin{enumerate} \\item Place the Rust Dragon Miniature/Card on the "
 "battlefield.  Ignore its ability.  \\item Prepare four spare M\\&M Deck "
-"cards to mark pools of acid.  \\end{enumerate} \\medskip \\textbf{Rules:} "
+"Cards to mark pools of acid.  \\end{enumerate} \\medskip \\textbf{Rules:} "
 "\\begin{itemize} \\item The Rust Dragon is immune to basic Spells.  \\item "
 "\\textit{Corrosive Vomit:} The Rust Dragon has a powerful crowd control "
 "ability that allows it to spew four pools of sulfuric acid onto the "
 "battlefield \\textit{at the beginning} of each Combat Round.  Use M\\&M Deck "
-"cards placed face down to mark their locations.  \\item The Rust Dragon "
+"Cards placed face down to mark their locations.  \\item The Rust Dragon "
 "cannot place pools on the same Fields as in the previous Round.  Mark the "
-"Fields with spare Faction cubes to indicate where the pools were located.  "
+"Fields with spare Faction Cubes to indicate where the pools were located.  "
 "\\item The pools of sulfuric acid block battlefield Fields and impede "
 "movement for one Round only.  They serve as Obstacles for both players and "
 "the Dragon.  \\item The Rust Dragon's passive ability, \\textit{Corrosion}, "
 "decreases an enemy Unit's armor by 2 with each attack.  Place a spare "
-"Faction cube on the Unit's card to indicate this effect.  Corrosion stacks "
+"Faction Cube on the Unit's Card to indicate this effect.  Corrosion stacks "
 "up to -4 \\svg{defense}.  \\end{itemize} }"
 msgstr ""
 "{ \\textbf{\\MakeUppercase{Boss: Rdzawy Smok {\\scriptsize Wymaga Roz. "
@@ -630,14 +630,14 @@ msgstr ""
 "do Gorgon; żyją i żerują w kopalniach siarki. Dzięki takiemu wiktowi atakują "
 "plując stężonym kwasem, który jest w stanie przeżreć najmocniejszą zbroję, "
 "osłabiając obronę celu i powodując dalsze obrażenia.} \\medskip \\\\ "
-"\\textbf{Walka ze Rdzawym Smokiem:} \\begin{enumerate} \\item Umieść figurkę/"
-"kartę Rdzawego Smoka na Polu Walki. Zignoruj jego zdolność. \\item Przygotuj "
-"cztery karty z Talii M\\&M do oznaczania pól kwasu. \\end{enumerate} "
+"\\textbf{Walka ze Rdzawym Smokiem:} \\begin{enumerate} \\item Umieść Figurkę/"
+"Kartę Rdzawego Smoka na Polu Walki. Zignoruj jego zdolność. \\item Przygotuj "
+"cztery Karty z Talii M\\&M do oznaczania pól kwasu. \\end{enumerate} "
 "\\medskip \\textbf{Zasady:} \\begin{itemize} \\item Rdzawy Smok jest odporny "
 "na podstawowe Zaklęcia. \\item \\textit{Żrące Wymiociny:} Rdzawy Smok "
 "posiada potężną zdolność kontroli tłumu, która pozwala mu wypluwać cztery "
 "pola kwasu siarkowego na Pole Bitwy \\textit{na początku} każdej Rundy "
-"walki. Użyj kart z Talii M\\&M umieszczonych rewersem do góry, aby oznaczyć "
+"walki. Użyj Kart z Talii M\\&M umieszczonych rewersem do góry, aby oznaczyć "
 "ich lokalizacje. \\item Rdzawy Smok nie może umieszczać kwasu na tych samych "
 "polach, co w poprzedniej Rundzie. Oznacz Pola za pomocą wolnych Kostek "
 "Frakcyji, aby wskazać Pola, gdzie znajdował się kwas. \\item Pola z kwasem "
@@ -700,9 +700,9 @@ msgid ""
 "magical tomes.  Some say they are invisible.  Some say they can cast "
 "spells.  Some say Magic Mirror is one of their natural defensive traits.  } "
 "\\medskip \\textbf{Fighting the Faerie Dragon:} \\begin{enumerate} \\item "
-"Place 2 Faerie Dragon cards on the battlefield.  Ignore their abilities.  "
-"\\item Place 1 Dendroid card from the \\svg{silver} Neutral Units Deck onto "
-"the battlefield, and place 3 additional cards face down to represent the "
+"Place 2 Faerie Dragon Cards on the battlefield.  Ignore their abilities.  "
+"\\item Place 1 Dendroid Card from the \\svg{silver} Neutral Units Deck onto "
+"the battlefield, and place 3 additional Cards face down to represent the "
 "other 3 Dendroids.  \\end{enumerate} \\medskip \\textbf{Rules:} "
 "\\begin{itemize} \\item The Faerie Dragon is immune to basic Spells.  \\item "
 "The Faerie Dragon can cast up to two different Spells per battle Round.  "
@@ -731,7 +731,7 @@ msgstr ""
 "Czarodziejskim Smokiem:} \\begin{enumerate} \\item Umieść na Polu bitwy 2 "
 "karty Czarodziejskich Smoków. Zignoruj ich zdolności. \\item Umieść na "
 "planszy Drzewca z Talii \\svg{silver} Jednostek Neutralnych i dodatkowo 3 "
-"zakryte karty reprezentujące pozostałe 3 Drzewce. \\end{enumerate} \\medskip "
+"zakryte Karty reprezentujące pozostałe 3 Drzewce. \\end{enumerate} \\medskip "
 "\\textbf{Zasady:} \\begin{itemize} \\item Czarodziejski Smok jest odporny na "
 "podstawowe Zaklęcia. \\item Czarodziejski Smok może rzucić maksymalnie dwa "
 "różne Zaklęcia na Rundę Walki. \\item Wszystkie Zaklęcia są widocznie obok "
